--- a/src/style.css
+++ b/src/style.css
@@ -451,8 +451,153 @@ dialog[open]::backdrop {
 
 #main {
   grid-area: 2 /2 /3/ 3;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px,1fr));
-  grid-auto-rows: minmax(100px, auto);
+  display: flex;
   
+  flex-wrap: wrap;
+  align-content: start;
+  /* max-width: 80vw;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min-content, 1fr));
+  grid-auto-rows: min-content;
+  justify-content: start;
+  justify-items: start; */
+  gap: 1.5em;
+}
+
+.toDoItemDiv{
+    max-height: fit-content;
+    min-width: min-content;
+    border: 2px solid var(--line-clr);
+    border-radius: 1.5em;
+    padding-left: 1em;
+    padding-top: 0.5em;
+    display: grid;
+
+    grid-template-columns: repeat(3, min-content);
+    grid-template-rows: min-content min-content min-content min-content;
+    gap: 1em;
+    button{
+        border: none;
+    }
+    .rightButton{
+        grid-area: 1 / 3 / 5 / 4;
+        height: 80%;
+        align-self: center;
+        margin-top: -0.5em;
+        width: 5px;
+    }
+    .bottomButton{
+        grid-area: 4 /1 /5 /4;
+        min-height: 5px;
+        width: 90%;
+        margin-left: -1em;
+        justify-self: center;
+    }
+
+
+    .topDiv{
+        /* border: 1px solid black; */
+        /* margin-top: -0.8em; */
+        display: flex;
+        max-height: 1.5ch;
+        justify-content: space-between;
+        
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+
+        .editButton{
+            margin-left: auto;
+            margin-right: 1em;
+        }
+        button{
+            min-height: 25px;
+            width: 25px;
+            
+            border-radius: 20px;
+        }
+
+        .editButton::before{
+            
+            content: "✎";
+            
+        }
+
+        .deleteButton:before{
+            content:"␡";
+            
+            position: relative;
+            top: -0.2em
+            
+        }
+        
+
+    }
+    .startDiv{
+        grid-area: 2 / 1 / 3 /2;
+       span{
+        text-wrap: nowrap;
+       }
+     }
+
+     
+
+     .rightDiv{
+        grid-area: 2/ 2 / 3 / 3 ;
+        
+        .textDiv{
+            max-width: 30ch;
+            flex-direction: column;
+            > span:first-child{
+                border-bottom: 0.5px solid grey;
+            }
+            p{
+                word-wrap: break-word;
+
+            }
+        }
+        
+     }
+     .bottomDiv{
+        overflow: hidden;
+        grid-area: 3 / 1 / 4 / 2 ;
+    
+     }
+
+     >div.hide{
+        display: none;
+     }
+
+
+     /* created the collapse the be able to handle the gap resizing  */
+     .startDiv.bottomCollapse{
+        grid-area: 2 / 1 / 4 / 2;
+     }
+     
+     .startDiv.rightCollapse{
+        grid-area: 1 / 1 / 3 / 3;
+     }
+
+     .startDiv.bottomCollapse.rightCollapse{
+        grid-area: 1 / 1 / 4 / 3;
+     }
+
+
+     .textDiv{
+        
+        border-bottom: 0.5px solid grey;
+
+        display: flex;
+        > span:first-child{
+            width: 11ch;
+            text-wrap: nowrap; 
+        }
+
+        
+        input{
+            margin-right: auto;
+        }
+
+        
+    } 
+
 }
