--- a/src/style.css
+++ b/src/style.css
@@ -165,6 +165,25 @@ button:active {
     gap: 1.5em;
     max-height: 100%;
   }
+
+  #searchLi{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 0.5em;
+    input{
+      width: 100%;
+      font-size: smaller;
+    }
+    >div{
+      display: flex;
+    }
+
+    .hidden{
+      display: none;
+    }
+  }
 }
 /* for all the rotatable svg, controlled through js by adding the rotate class to the parent */
 .rotateEnable {
