--- a/src/style.css
+++ b/src/style.css
@@ -496,6 +496,10 @@ dialog[open]::backdrop {
   gap: 1.5em;
 }
 
+
+
+
+
 .toDoItemDiv {
   max-height: fit-content;
   min-width: min-content;
@@ -584,9 +588,7 @@ dialog[open]::backdrop {
     grid-area: 3 / 1 / 4 / 2;
   }
 
-  > div.hide {
-    display: none;
-  }
+
 
   /* created the collapse the be able to handle the gap resizing  */
   .startDiv.bottomCollapse {
@@ -614,4 +616,40 @@ dialog[open]::backdrop {
       margin-right: auto;
     }
   }
+
+  > div.hide {
+    
+    display: none;
+
+  }
+
+} 
+
+.toDoItemDiv{
+  animation: fadeIn 500ms;
 }
+
+.toDoItemDiv.close{
+    opacity: 0;
+    animation: fadeOut 500ms;
+  
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
